# rust-tutorial

./: README.md
Kafka Services/: Cargo.toml  ReadMe.md  docker-compose.yml  run-services.sh
Kafka Services/receiver/: Cargo.toml
Kafka Services/receiver/src/: main.rs
Kafka Services/sender/: Cargo.toml
Kafka Services/sender/src/: main.rs
Redis/: .gitignore  Cargo.toml  ConfigTip.md  Makefile  README.md  docker-compose.yml
Redis/src/: demo.rs  lib.rs  main.rs
