[package]
name = "receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }